# ds_test1

./: .gitignore  DEVELOPMENT.md  README.md  config.example.yaml  config.yaml  create_search_engine.md  idea.md  main.py  pyproject.toml  requirements.txt  test_filename_generation.py  test_google_search.py  test_hybrid_search.py  test_improved_report.py  test_improvements.py  test_iteration.py  test_ollama_connection.py  test_ollama_structured.py  test_structured_response.py
